--- a/html/index.html
+++ b/html/index.html
@@ -1,1 +1,24 @@
-1
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link href="css/style.css" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <a href="https://google.com">
+            <img src="img/110.png" width="300" height="200">
+        </a>
+        <ul>
+            <li>EVENT DETALIST</li>
+            <li>SPEAKERS</li>
+            <li>SPONSORS</li>
+            <li>PAST EVENTS</li>
+            <li>CONTACT</li>
+        </ul>
+    </header>   
+</body>
+</html>
