--- a/html/index.html
+++ b/html/index.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link href="css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <header>
+    <header class="back">
         <a href="https://google.com">
-            <img src="img/110.png" width="300" height="200">
+            <img src="img/110.png" width="390" height="90" class="logo">
         </a>
         <ul>
             <li>EVENT DETALIST</li>
@@ -19,6 +21,20 @@
             <li>PAST EVENTS</li>
             <li>CONTACT</li>
         </ul>
-    </header>   
+        <div class="timer">
+            <img src="img/Seconds.png">
+        </div>
+        <div class="sing">
+            <h1 class="holo">Sing up of our event</h1>
+            <div class="name">
+                <textarea name="Your name" cols=30 rows=1></textarea>
+            </div>
+            <div class="ikon1"></div>
+            <div class="ikon2"></div>
+            <div class="ikon3"></div>
+            <div class="letme"></div>
+            <h6>hurry up</h6>
+        </div>
+    </header>  
 </body>
 </html>
